# wenxianjiedu

./: .gitignore  CODE_WIKI.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.trae/documents/: detailed-system-improvement-plan.md  paper-interpretation-system-optimization-plan.md  paper-interpretation-system-plan.md  system-improvement-plan.md
docs/plans/: 2026-04-10-wenxianjiedu-stability-and-batch-optimization-execution-plan.md
docs/requirements/: 2026-04-10-wenxianjiedu-stability-and-batch-optimization.md
outputs/e2e-verify/: full_paper_apa7_解读.md
src/: main.tsx  setupTests.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/__tests__/: ChunkCacheService.test.ts  ConfigPresetService.test.ts  ErrorHandlerService.test.ts  InputSelectorPanel.test.tsx  LoggerService.test.ts  ModelConfigPanel.test.tsx  OutputPanel.test.tsx  PanelCard.test.tsx  PerformanceMonitorService.test.ts  PromptEditorPanel.test.tsx  ResultPanel.test.tsx  SmartChunkingService.test.ts  TaskPanel.test.tsx  endpoint.test.ts  integration.test.ts  performance.test.ts
src/app/: App.tsx  appFacade.ts  services.ts
src/hooks/: useAttachmentTest.ts
src/plugins/: Plugin.ts  PluginManager.ts
src/repositories/config/: ConfigRepository.ts  (+1 more)
src/types/: config.ts  file.ts  llm.ts  output.ts  parser.ts  prompt.ts  task.ts
src/utils/: concurrencyManager.ts  dependencyInjection.ts  endpoint.ts  id.ts  path.ts  requestThrottler.ts  runError.ts  validate.ts
(+79 files in other folders)
